--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
+
 Options All -Indexes
 
 RewriteEngine On
-RewriteRule ^([a-zA-Z0-9/ñÑ-]+)$ index.php?views=$1 
+
+RewriteRule ^([a-zA-Z0-9/]+)$ index.php?views=$1
