--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,7 @@ Options All -Indexes
 
 RewriteEngine On
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteRule ^([a-zA-Z0-9/]+)$ index.php?views=$1
